2010-02-26  Marcus Krause   <marcus#exp2010@t3sec.info>

	* Feature: backported PHPass library from sysext:saltedpasswords (TYPO3 4.3+)

2009-10-27  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #4629: Update-Module not very clear (thanks to Georg Ringer)
	* Bug #4927: UPDATE! show up only if last created password is not encrypted (thanks to Dimitri Koenig)


2009-09-04  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #4456: Allow overwriting translations via TS. (thanks to Jonas Duebi)
	* Bug #4456: Add XCLASS code to felogin xclass (thanks to Jonas Duebi)
	* Task #4448: Cleanup: Remove randombyte-generator
	* Feature #4446: Add short labels for extension configuration template


2009-05-18  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3436: Problems with Localization


2009-05-18  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3365: PHP complains about deprecated call-time pass-by-reference


2009-05-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3254: Code cleanup - remove unnecessary method call (user record)


2009-03-24  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2956: Forget Password mail not send due to wrong forgothash


2009-03-23  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2951: Form evaluation fails for activated salted passwords in one TYPO3 mode only


2009-03-07  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2323: HTML Entities in Plain-Text-Mail
	* Feature #2742: Get template configuration from felogin
	* Bug #2743: felogin "forgot password" form does not work with t3sec_saltedpw
	* Bug #2741: BE users cannot change their own passwords - add warning in extension configuration


2009-01-31  Marcus Krause   <marcus#exp2009@t3sec.info>

	* implement Unit-Test that tests update necessity for decreased standard hash count (follow-up to #2441)


2009-01-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2439: In case of a modifed HASHCOUNT, a non-valid PHPass password would be set